--- a/Tajam/assets/css/style.css
+++ b/Tajam/assets/css/style.css
@@ -342,15 +342,16 @@ opacity: 0;
 	position: relative;
 	top: 180px;
 }
-.inline{
-	display: flex;
-	
+.works__grid{
+	display:grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: 2 180px;
 }
 .works{
 	width: 100%;
-	height: 620px;
+	padding-bottom: 50px;
 	position: relative;
-	top: 700px;
+	margin-top: 35px;
 }
 .works_top{
 	height: 100px;
@@ -386,12 +387,12 @@ opacity: 0;
 	text-align: center;
 }
 .feedbacks{
-	height: 550px;
+	
 	position: relative;
-	top:700px;
+	
 	background-image: url(../img/works.jpg);
 
-	        background-size: 100% 600px;
+	        background-size: 	cover;
 
 }
 .feedbacks:before {
@@ -412,9 +413,10 @@ opacity: 0;
     color: #fff;
     font-size: 16px;
     z-index: 2;
-    padding-left: 300px;
+    padding-left: 10%;
     padding-top: 50px;
-    padding-right: 300px;
+    padding-right: 10%;
+    padding-bottom: 60px;
 }
 .PrevBtn,
 .NextBtn{
@@ -472,10 +474,22 @@ opacity: 0;
 .ellipse3{
 	background-image: url(../img/image4.jpg) !important;
 }
+.feedback__slide{
+	border:none;
+	outline: none;
+
+	background-color: transparent;
+	text-align: center;
+	padding-top: 75px;
+	padding-bottom: 75px;
+	    padding-left: 70px;
+    padding-right: 70px;
+
+	
+}
 .feedbackDots
 {
-    position: absolute;
-    bottom: -50px;
+  
 
     display: block;
 
@@ -756,3 +770,68 @@ opacity: 0;
 
 	}
 
+@media screen and (max-width:940px){
+	.works__grid{
+		grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: 3 180px;
+	}
+}
+@media screen and (max-width:780px){
+	.works__grid{
+		grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 4 180px;
+	}
+}
+@media screen and (max-width:700px){
+	.works__grid{
+		grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 6 180px;
+	}
+}
+
+
+
+@media screen and (max-width:1095px){
+	.feedbacks:before{
+		height: 572px;
+	}
+}
+
+
+@media screen and (max-width:908px){
+	.feedbacks:before{
+		height: 597px;
+	}
+}
+
+
+@media screen and (max-width:789px){
+	.feedbacks:before{
+		height: 619px;
+	}
+}
+@media screen and (max-width:720px){
+	.feedbacks:before{
+		height: 644px;
+	}
+}
+@media screen and (max-width:649px){
+	.feedbacks:before{
+		height: 670px;
+	}
+}
+@media screen and (max-width:593px){
+	.feedbacks:before{
+		height: 692px;
+	}
+}
+@media screen and (max-width:560px){
+	.feedbacks:before{
+		height: 718px;
+	}
+}
+@media screen and (max-width:524px){
+	.feedbacks:before{
+		height: 740px;
+	}
+}
